// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pipeline IR > 2024-11-05 > matches the shape summary snapshot 1`] = `
{
  "capabilities": [
    "client:experimental",
    "client:roots",
    "client:sampling",
    "server:experimental",
    "server:logging",
    "server:prompts",
    "server:resources",
    "server:tools",
  ],
  "dialect": "draft-07",
  "methods": [
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "completion/complete",
      "resultType": "CompleteResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "initialize",
      "resultType": "InitializeResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "logging/setLevel",
      "resultType": "EmptyResult",
    },
    {
      "direction": "both",
      "messageType": "notification",
      "method": "notifications/cancelled",
      "resultType": undefined,
    },
    {
      "direction": "clientToServer",
      "messageType": "notification",
      "method": "notifications/initialized",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/message",
      "resultType": undefined,
    },
    {
      "direction": "both",
      "messageType": "notification",
      "method": "notifications/progress",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/prompts/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/resources/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/resources/updated",
      "resultType": undefined,
    },
    {
      "direction": "clientToServer",
      "messageType": "notification",
      "method": "notifications/roots/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/tools/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "both",
      "messageType": "request",
      "method": "ping",
      "resultType": "EmptyResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "prompts/get",
      "resultType": "GetPromptResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "prompts/list",
      "resultType": "ListPromptsResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/list",
      "resultType": "ListResourcesResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/read",
      "resultType": "ReadResourceResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/subscribe",
      "resultType": "EmptyResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/templates/list",
      "resultType": "ListResourceTemplatesResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/unsubscribe",
      "resultType": "EmptyResult",
    },
    {
      "direction": "serverToClient",
      "messageType": "request",
      "method": "roots/list",
      "resultType": "ListRootsResult",
    },
    {
      "direction": "serverToClient",
      "messageType": "request",
      "method": "sampling/createMessage",
      "resultType": "CreateMessageResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "tools/call",
      "resultType": "CallToolResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "tools/list",
      "resultType": "ListToolsResult",
    },
  ],
  "typeCount": 79,
  "typesByKind": {
    "alias": 1,
    "enum": 2,
    "object": 66,
    "scalar": 1,
    "union": 9,
  },
}
`;

exports[`pipeline IR > 2025-03-26 > matches the shape summary snapshot 1`] = `
{
  "capabilities": [
    "client:experimental",
    "client:roots",
    "client:sampling",
    "server:completions",
    "server:experimental",
    "server:logging",
    "server:prompts",
    "server:resources",
    "server:tools",
  ],
  "dialect": "draft-07",
  "methods": [
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "completion/complete",
      "resultType": "CompleteResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "initialize",
      "resultType": "InitializeResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "logging/setLevel",
      "resultType": "EmptyResult",
    },
    {
      "direction": "both",
      "messageType": "notification",
      "method": "notifications/cancelled",
      "resultType": undefined,
    },
    {
      "direction": "clientToServer",
      "messageType": "notification",
      "method": "notifications/initialized",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/message",
      "resultType": undefined,
    },
    {
      "direction": "both",
      "messageType": "notification",
      "method": "notifications/progress",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/prompts/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/resources/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/resources/updated",
      "resultType": undefined,
    },
    {
      "direction": "clientToServer",
      "messageType": "notification",
      "method": "notifications/roots/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/tools/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "both",
      "messageType": "request",
      "method": "ping",
      "resultType": "EmptyResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "prompts/get",
      "resultType": "GetPromptResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "prompts/list",
      "resultType": "ListPromptsResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/list",
      "resultType": "ListResourcesResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/read",
      "resultType": "ReadResourceResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/subscribe",
      "resultType": "EmptyResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/templates/list",
      "resultType": "ListResourceTemplatesResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/unsubscribe",
      "resultType": "EmptyResult",
    },
    {
      "direction": "serverToClient",
      "messageType": "request",
      "method": "roots/list",
      "resultType": "ListRootsResult",
    },
    {
      "direction": "serverToClient",
      "messageType": "request",
      "method": "sampling/createMessage",
      "resultType": "CreateMessageResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "tools/call",
      "resultType": "CallToolResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "tools/list",
      "resultType": "ListToolsResult",
    },
  ],
  "typeCount": 83,
  "typesByKind": {
    "alias": 3,
    "enum": 2,
    "object": 68,
    "scalar": 1,
    "union": 9,
  },
}
`;

exports[`pipeline IR > 2025-06-18 > matches the shape summary snapshot 1`] = `
{
  "capabilities": [
    "client:elicitation",
    "client:experimental",
    "client:roots",
    "client:sampling",
    "server:completions",
    "server:experimental",
    "server:logging",
    "server:prompts",
    "server:resources",
    "server:tools",
  ],
  "dialect": "draft-07",
  "methods": [
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "completion/complete",
      "resultType": "CompleteResult",
    },
    {
      "direction": "serverToClient",
      "messageType": "request",
      "method": "elicitation/create",
      "resultType": "ElicitResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "initialize",
      "resultType": "InitializeResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "logging/setLevel",
      "resultType": "EmptyResult",
    },
    {
      "direction": "both",
      "messageType": "notification",
      "method": "notifications/cancelled",
      "resultType": undefined,
    },
    {
      "direction": "clientToServer",
      "messageType": "notification",
      "method": "notifications/initialized",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/message",
      "resultType": undefined,
    },
    {
      "direction": "both",
      "messageType": "notification",
      "method": "notifications/progress",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/prompts/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/resources/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/resources/updated",
      "resultType": undefined,
    },
    {
      "direction": "clientToServer",
      "messageType": "notification",
      "method": "notifications/roots/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/tools/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "both",
      "messageType": "request",
      "method": "ping",
      "resultType": "EmptyResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "prompts/get",
      "resultType": "GetPromptResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "prompts/list",
      "resultType": "ListPromptsResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/list",
      "resultType": "ListResourcesResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/read",
      "resultType": "ReadResourceResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/subscribe",
      "resultType": "EmptyResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/templates/list",
      "resultType": "ListResourceTemplatesResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/unsubscribe",
      "resultType": "EmptyResult",
    },
    {
      "direction": "serverToClient",
      "messageType": "request",
      "method": "roots/list",
      "resultType": "ListRootsResult",
    },
    {
      "direction": "serverToClient",
      "messageType": "request",
      "method": "sampling/createMessage",
      "resultType": "CreateMessageResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "tools/call",
      "resultType": "CallToolResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "tools/list",
      "resultType": "ListToolsResult",
    },
  ],
  "typeCount": 91,
  "typesByKind": {
    "alias": 1,
    "enum": 2,
    "object": 76,
    "scalar": 1,
    "union": 11,
  },
}
`;

exports[`pipeline IR > 2025-11-25 > matches the shape summary snapshot 1`] = `
{
  "capabilities": [
    "client:elicitation",
    "client:experimental",
    "client:roots",
    "client:sampling",
    "client:tasks",
    "server:completions",
    "server:experimental",
    "server:logging",
    "server:prompts",
    "server:resources",
    "server:tasks",
    "server:tools",
  ],
  "dialect": "2020-12",
  "methods": [
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "completion/complete",
      "resultType": "CompleteResult",
    },
    {
      "direction": "serverToClient",
      "messageType": "request",
      "method": "elicitation/create",
      "resultType": "ElicitResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "initialize",
      "resultType": "InitializeResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "logging/setLevel",
      "resultType": "EmptyResult",
    },
    {
      "direction": "both",
      "messageType": "notification",
      "method": "notifications/cancelled",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/elicitation/complete",
      "resultType": undefined,
    },
    {
      "direction": "clientToServer",
      "messageType": "notification",
      "method": "notifications/initialized",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/message",
      "resultType": undefined,
    },
    {
      "direction": "both",
      "messageType": "notification",
      "method": "notifications/progress",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/prompts/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/resources/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/resources/updated",
      "resultType": undefined,
    },
    {
      "direction": "clientToServer",
      "messageType": "notification",
      "method": "notifications/roots/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "both",
      "messageType": "notification",
      "method": "notifications/tasks/status",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/tools/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "both",
      "messageType": "request",
      "method": "ping",
      "resultType": "EmptyResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "prompts/get",
      "resultType": "GetPromptResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "prompts/list",
      "resultType": "ListPromptsResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/list",
      "resultType": "ListResourcesResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/read",
      "resultType": "ReadResourceResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/subscribe",
      "resultType": "EmptyResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/templates/list",
      "resultType": "ListResourceTemplatesResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/unsubscribe",
      "resultType": "EmptyResult",
    },
    {
      "direction": "serverToClient",
      "messageType": "request",
      "method": "roots/list",
      "resultType": "ListRootsResult",
    },
    {
      "direction": "serverToClient",
      "messageType": "request",
      "method": "sampling/createMessage",
      "resultType": "CreateMessageResult",
    },
    {
      "direction": "both",
      "messageType": "request",
      "method": "tasks/cancel",
      "resultType": "CancelTaskResult",
    },
    {
      "direction": "both",
      "messageType": "request",
      "method": "tasks/get",
      "resultType": "GetTaskResult",
    },
    {
      "direction": "both",
      "messageType": "request",
      "method": "tasks/list",
      "resultType": "ListTasksResult",
    },
    {
      "direction": "both",
      "messageType": "request",
      "method": "tasks/result",
      "resultType": "GetTaskPayloadResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "tools/call",
      "resultType": "CallToolResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "tools/list",
      "resultType": "ListToolsResult",
    },
  ],
  "typeCount": 145,
  "typesByKind": {
    "alias": 4,
    "enum": 3,
    "object": 120,
    "scalar": 1,
    "union": 17,
  },
}
`;

exports[`pipeline IR > draft > matches the shape summary snapshot 1`] = `
{
  "capabilities": [
    "client:elicitation",
    "client:experimental",
    "client:extensions",
    "client:roots",
    "client:sampling",
    "server:completions",
    "server:experimental",
    "server:extensions",
    "server:logging",
    "server:prompts",
    "server:resources",
    "server:tools",
  ],
  "dialect": "2020-12",
  "methods": [
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "completion/complete",
      "resultType": "CompleteResult",
    },
    {
      "direction": "serverToClient",
      "messageType": "request",
      "method": "elicitation/create",
      "resultType": "ElicitResult",
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/cancelled",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/message",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/progress",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/prompts/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/resources/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/resources/updated",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/subscriptions/acknowledged",
      "resultType": undefined,
    },
    {
      "direction": "serverToClient",
      "messageType": "notification",
      "method": "notifications/tools/list_changed",
      "resultType": undefined,
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "prompts/get",
      "resultType": "GetPromptResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "prompts/list",
      "resultType": "ListPromptsResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/list",
      "resultType": "ListResourcesResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/read",
      "resultType": "ReadResourceResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "resources/templates/list",
      "resultType": "ListResourceTemplatesResult",
    },
    {
      "direction": "serverToClient",
      "messageType": "request",
      "method": "roots/list",
      "resultType": "ListRootsResult",
    },
    {
      "direction": "serverToClient",
      "messageType": "request",
      "method": "sampling/createMessage",
      "resultType": "CreateMessageResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "server/discover",
      "resultType": "DiscoverResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "subscriptions/listen",
      "resultType": "SubscriptionsListenResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "tools/call",
      "resultType": "CallToolResult",
    },
    {
      "direction": "clientToServer",
      "messageType": "request",
      "method": "tools/list",
      "resultType": "ListToolsResult",
    },
  ],
  "typeCount": 154,
  "typesByKind": {
    "alias": 3,
    "enum": 2,
    "object": 130,
    "scalar": 2,
    "union": 17,
  },
}
`;
